# cookie-injector

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: claude-code-review.yml
config/: sites.example.yaml
docs/decisions/: 0001-hybrid-failure-handling.md  0002-session-cookie-persistence-workaround.md  0003-adaptive-scheduled-refresh.md  0004-embedded-cookie-metadata.md
health/: Dockerfile  pyproject.toml  server.py
health/static/: index.html
health/tests/: test_health.py
proxy/: Dockerfile  addon.py  cookie_store.py  pyproject.toml
proxy/tests/: test_addon.py
refresh/: Dockerfile  alerting.py  config.py  cookie_store.py  main.py  pyproject.toml  refresh.py  scheduler.py
refresh/scripts/: nrc.py
refresh/tests/: test_adaptive_refresh.py  test_cookie_store.py  test_session_workaround.py
