[project]
name = "cookie-injector"
version = "0.1.0"
description = "Cookie-injecting proxy for authenticated access to paywalled sites"
authors = [{name = "pvliesdonk"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0.0",
    "tldextract>=5.0.0",
    "structlog>=24.0.0",
    "playwright>=1.50.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["proxy/tests", "refresh/tests", "health/tests"]
python_files = "test_*.py"
python_functions = "test_*"
