[project]
name = "cookie-injector-refresh"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "PyYAML>=6.0.0",
    "tldextract>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
